k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo-demo-app
    app.kubernetes.io/component: todo-demo-app
    app.kubernetes.io/instance: todo-demo-app
    app.kubernetes.io/name: todo-demo-app
    app.kubernetes.io/part-of: todo-demo-app-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  name: todo-demo-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: todo-demo-app
    weight: 100
  wildcardPolicy: None
